--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="paragraph">
         <p>Can make do with Nice Graphics.</p>
         <p>Can Take nice shots, and can edit them perfectly.</p>
-        <p>I think i know a bit of music, but people do say that I actually know anything.</p>
+        <p>People think i know a bit of music, well, i think i lot a bit actually.</p>
       </div>
       </div>
     </div>
@@ -54,9 +54,9 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/babayemi-oladipupo-698820189">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/@oladipupobabay2">Twitter</a>
-    <a class="footer-link" href="https://www.diptech.info/">Website</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/Babayemi Oladipupo">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/@DipTech_">Twitter</a>
+    <a class="footer-link" href="https://t.me/DipTech_">Telegram</a>
     <p class="foot">© 2020 Oladipupo Babayemi.</p>
     <p class="foot">©diptech😎</p>
   </div>
