--- a/index.html
+++ b/index.html
@@ -28,15 +28,10 @@
         <img class="skill-picture" src="dev.svg" alt="My Skills">
         <h3>Development</h3>
         <p>I started learning Design and Development when I was 17 years old. I started with Website Designing using Wordpress and other resources along side. I started learning the Development aspect when I realised I need to start making Web Applications.</p>
-      </div>
-      <div class="skill-row">
+      
         <img class="side" src="skills.svg" alt="Skill row">
         <h3>Skills</h3>
-      <div class="paragraph">
-        <p>Can make do with Nice Graphics.</p>
-        <p>Can Take nice shots, and can edit them perfectly.</p>
-        <p>People think i know a bit of music, well, i think i lot a bit actually.</p>
-      </div>
+        <p>Can make do with Nice Graphics.Can Take nice shots, and can edit them perfectly. People think i know a bit of music, well, i think i lot a bit actually.</p>
       </div>
     </div>
     <hr>
@@ -54,9 +49,9 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/Babayemi Oladipupo">LinkedIn</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/babayemi-oladipupo-698820189">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/@DipTech_">Twitter</a>
-    <a class="footer-link" href="https://t.me/DipTech_">Telegram</a>
+    <a class="footer-link" href="https://t.me/@Diptech4">Telegram</a>
     <p class="foot">© 2020 Oladipupo Babayemi.</p>
     <p class="foot">©diptech😎</p>
   </div>
