--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       
         <img class="side" src="skills.svg" alt="Skill row">
         <h3>Skills</h3>
-        <p>Can make do with Nice Graphics.Can Take nice shots, and can edit them perfectly. People think i know a bit of music, well, i think i lot a bit actually.</p>
+        <p>Can make do with Nice Graphics.Can Take nice shots, and can edit them perfectly. People think I know a bit of music, well, I think I lot a bit actually.</p>
       </div>
     </div>
     <hr>
